# bazel_rules_go

./: .gitignore  MODULE.bazel  README.md  release-please-config.json
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: pr-title-lint.yml  publish.yml  release-please.yml  release.yml  update-versions-ci.yml
e2e/smoke/: BUILD.bazel  MODULE.bazel  go.mod  main.go  smoke_test.go
golangci_lint/: defs.bzl  extensions.bzl
golangci_lint/configs/: BUILD.bazel  standard.yml
golangci_lint/private/: BUILD.bazel  golangci_lint_binary.BUILD.bazel  golangci_lint_test.bzl  versions.bzl
nogo/: BUILD.bazel  README.md  nogo_config.json
tools/update_versions/: BUILD.bazel  README.md  checksum.go  checksum_test.go  github.go  go.mod  go.sum  integration_test.go  main.go  mock_github.go  runner.go  template.bzl.tmpl  template.go  template_test.go
tools/update_versions/cache/checksums/: v1.64.3.txt  v1.64.4.txt  v1.64.6.txt  v1.64.7.txt  v1.64.8.txt  v2.0.0.txt  v2.0.1.txt  v2.1.0.txt  v2.1.1.txt  v2.1.2.txt  v2.1.3.txt  v2.1.4.txt  v2.1.5.txt  v2.1.6.txt  v2.2.0.txt  v2.2.1.txt  v2.2.2.txt  v2.3.0.txt  v2.3.1.txt  v2.4.0.txt  v2.5.0.txt  v2.6.0.txt  v2.6.1.txt
tools/update_versions/testdata/checksums/: invalid_hash.txt  malformed.txt  only_packages.txt  valid.txt
