"""
Shared Bazel extensions / rules used across @jmgilman's repositories.
"""

module(
    name = "jmgilman_rules_go",
    # Version is managed by the BCR registry through patches.
    version = "",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.41.0")

# Configure Go SDK to use standard nogo analyzers
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")
go_sdk.nogo(
    nogo = "//nogo:standard_nogo",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//tools/update_versions:go.mod")

# Add x/tools for nogo analyzers
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:vU5i/LfpvrRCpgM/VPfJLg5KjxD3E+hfT1SH+d9zLwg=",
    version = "v0.21.1-0.20240508182429-e35e4ccd0d2d",
)

use_repo(
    go_deps,
    "com_github_google_go_github_v62",
    "com_github_stretchr_testify",
    "org_golang_x_tools",
)

golangci = use_extension("//golangci_lint:extensions.bzl", "golangci_lint")

# No config specified - should use default version
use_repo(golangci, "golangci_lint_binary")
